--- a/.editorconfig
+++ b/.editorconfig
@@ -7,6 +7,11 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
+[*.pug]
+indent_style = space
+indent_size = 2
+trim_trailing_whitespace = false
+
 [{package.json,*.yml}]
 indent_style = space
 indent_size = 2
